--- a/XellissimeTravel/View/Storyboard/Translate.storyboard
+++ b/XellissimeTravel/View/Storyboard/Translate.storyboard
@@ -87,23 +87,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your text to translate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Wz-lP-79F">
-                                <rect key="frame" x="20" y="108" width="374" height="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your text to translate" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Wz-lP-79F">
+                                <rect key="frame" x="20" y="108" width="374" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="e0z-OE-iFW"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUR TRANSLATION HERE" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="nlj-Um-M32">
-                                <rect key="frame" x="20" y="372" width="374" height="200"/>
+                                <rect key="frame" x="20" y="378" width="374" height="345"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="200" id="rul-P7-CvZ"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="200" id="rul-P7-CvZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xas-nZ-cCF">
-                                <rect key="frame" x="88.5" y="721" width="237" height="72"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xas-nZ-cCF">
+                                <rect key="frame" x="20" y="743" width="374" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="OWC-56-PjX"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="50"/>
                                 <state key="normal" title="Translate">
                                     <color key="titleColor" red="0.039215686270000001" green="0.37647058820000001" blue="0.47843137250000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -113,7 +119,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" indicatorStyle="white" text="YOUR TEXT HERE" textAlignment="center" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fm9-bB-a4L">
-                                <rect key="frame" x="20" y="152" width="374" height="200"/>
+                                <rect key="frame" x="20" y="158" width="374" height="200"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="5pL-nN-Int"/>
@@ -126,7 +132,7 @@
                                 </connections>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UWx-7h-hMN">
-                                <rect key="frame" x="374" y="157" width="20" height="20"/>
+                                <rect key="frame" x="374" y="163" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="bik-DW-syt"/>
                                     <constraint firstAttribute="width" constant="20" id="zDe-Rm-Xhh"/>
@@ -143,14 +149,20 @@
                             <constraint firstItem="zcd-FA-964" firstAttribute="trailing" secondItem="8Wz-lP-79F" secondAttribute="trailing" constant="20" id="0mx-v1-xgn"/>
                             <constraint firstItem="xas-nZ-cCF" firstAttribute="centerX" secondItem="7My-bS-R4I" secondAttribute="centerX" id="DUj-d9-RJi"/>
                             <constraint firstItem="zcd-FA-964" firstAttribute="trailing" secondItem="UWx-7h-hMN" secondAttribute="trailing" constant="20" id="Ig2-mG-3S7"/>
+                            <constraint firstItem="xas-nZ-cCF" firstAttribute="leading" secondItem="zcd-FA-964" secondAttribute="leading" constant="20" id="IjY-Uq-pIe"/>
                             <constraint firstItem="zcd-FA-964" firstAttribute="bottom" secondItem="xas-nZ-cCF" secondAttribute="bottom" constant="20" id="Non-9h-yVs"/>
                             <constraint firstItem="8Wz-lP-79F" firstAttribute="top" secondItem="zcd-FA-964" secondAttribute="top" constant="20" id="PbC-12-d6m"/>
                             <constraint firstItem="zcd-FA-964" firstAttribute="trailing" secondItem="nlj-Um-M32" secondAttribute="trailing" constant="20" id="Qy2-Ew-BKN"/>
                             <constraint firstItem="fm9-bB-a4L" firstAttribute="top" secondItem="8Wz-lP-79F" secondAttribute="bottom" constant="20" id="UdR-db-QRP"/>
-                            <constraint firstItem="nlj-Um-M32" firstAttribute="top" secondItem="fm9-bB-a4L" secondAttribute="bottom" constant="20" id="YNk-sm-gly"/>
+                            <constraint firstItem="nlj-Um-M32" firstAttribute="top" secondItem="fm9-bB-a4L" secondAttribute="bottom" priority="750" constant="20" id="YNk-sm-gly"/>
+                            <constraint firstItem="8Wz-lP-79F" firstAttribute="leading" secondItem="zcd-FA-964" secondAttribute="leading" constant="20" id="ax8-wY-vSM"/>
+                            <constraint firstItem="zcd-FA-964" firstAttribute="trailing" secondItem="xas-nZ-cCF" secondAttribute="trailing" constant="20" id="eJV-iw-rDX"/>
                             <constraint firstItem="8Wz-lP-79F" firstAttribute="leading" secondItem="zcd-FA-964" secondAttribute="leading" constant="20" id="i6w-SB-Ckf"/>
                             <constraint firstItem="zcd-FA-964" firstAttribute="trailing" secondItem="fm9-bB-a4L" secondAttribute="trailing" constant="20" id="i8X-hL-GOW"/>
+                            <constraint firstItem="zcd-FA-964" firstAttribute="trailing" secondItem="8Wz-lP-79F" secondAttribute="trailing" constant="20" id="ioH-zp-PKU"/>
+                            <constraint firstItem="xas-nZ-cCF" firstAttribute="top" secondItem="nlj-Um-M32" secondAttribute="bottom" constant="20" id="k2e-SQ-RBu"/>
                             <constraint firstItem="UWx-7h-hMN" firstAttribute="top" secondItem="8Wz-lP-79F" secondAttribute="bottom" constant="25" id="pRZ-O3-6Sx"/>
+                            <constraint firstItem="8Wz-lP-79F" firstAttribute="top" secondItem="zcd-FA-964" secondAttribute="top" constant="20" id="vUw-cl-0hZ"/>
                             <constraint firstItem="fm9-bB-a4L" firstAttribute="leading" secondItem="zcd-FA-964" secondAttribute="leading" constant="20" id="zL0-JN-24b"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zcd-FA-964"/>
