--- a/XellissimeTravel/View/Storyboard/XellissimeTravel/Storyboard/Base.lproj/Change.storyboard
+++ b/XellissimeTravel/View/Storyboard/XellissimeTravel/Storyboard/Base.lproj/Change.storyboard
@@ -92,16 +92,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T8H-rS-aw7">
-                                <rect key="frame" x="20" y="721" width="374" height="72"/>
-                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="50"/>
-                                <state key="normal" title="GO">
-                                    <color key="titleColor" red="0.039215686270000001" green="0.37647058820000001" blue="0.47843137250000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </state>
-                                <connections>
-                                    <action selector="goFXButton:" destination="YSi-Eq-Ean" eventType="touchUpInside" id="9xE-oj-qch"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please enter your amount to change..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3CI-Ah-oEX">
                                 <rect key="frame" x="20" y="108" width="374" height="24"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
@@ -119,7 +109,7 @@
                                 </connections>
                             </textField>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="92" translatesAutoresizingMaskIntoConstraints="NO" id="fda-S1-JeL">
-                                <rect key="frame" x="20" y="438" width="374" height="50"/>
+                                <rect key="frame" x="20" y="202" width="374" height="50"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="8ge-dy-rwU">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -147,26 +137,8 @@
                                     <constraint firstAttribute="trailing" secondItem="8tV-Rf-4Zb" secondAttribute="trailing" id="snH-Iy-qsV"/>
                                 </constraints>
                             </stackView>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ATk-rD-IrT">
-                                <rect key="frame" x="50" y="202" width="314" height="216"/>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="YSi-Eq-Ean" id="lj0-RO-vR9"/>
-                                    <outlet property="delegate" destination="YSi-Eq-Ean" id="uiL-dx-0Ru"/>
-                                </connections>
-                            </pickerView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HZX-ha-Fn7">
-                                <rect key="frame" x="131" y="665" width="152" height="36"/>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                <state key="normal" title="Switch Currency">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="switchCurrencyButton:" destination="YSi-Eq-Ean" eventType="touchUpInside" id="7Xs-Of-SAX"/>
-                                </connections>
-                            </button>
                             <stackView opaque="NO" contentMode="scaleAspectFill" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="YLr-wp-1wp">
-                                <rect key="frame" x="20" y="508" width="374" height="50"/>
+                                <rect key="frame" x="20" y="272" width="374" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="zy0-YG-gKN">
                                         <rect key="frame" x="0.0" y="0.0" width="13.5" height="50"/>
@@ -188,33 +160,49 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HZX-ha-Fn7">
+                                <rect key="frame" x="123" y="695" width="168" height="36"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                <state key="normal" title="Switch Currencies">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="switchCurrencyButton:" destination="YSi-Eq-Ean" eventType="touchUpInside" id="7Xs-Of-SAX"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wte-kV-CFN">
+                                <rect key="frame" x="20" y="751" width="374" height="42"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="25"/>
+                                <state key="normal" title="Choose currency">
+                                    <color key="titleColor" red="0.039215686270000001" green="0.37647058820000001" blue="0.47843137250000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                                <connections>
+                                    <action selector="chooseCurrencyButtonPressed:" destination="YSi-Eq-Ean" eventType="touchUpInside" id="iWO-0K-Z2S"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.49623023040000003" green="0.69865077730000003" blue="0.61791028290000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" red="0.62714248900000003" green="0.32853841779999998" blue="0.53334838149999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="bzv-6z-Cgt" firstAttribute="bottom" secondItem="T8H-rS-aw7" secondAttribute="bottom" constant="20" id="2LJ-vy-Vhh"/>
+                            <constraint firstItem="bzv-6z-Cgt" firstAttribute="trailing" secondItem="wte-kV-CFN" secondAttribute="trailing" constant="20" id="0cg-if-c0M"/>
+                            <constraint firstItem="wte-kV-CFN" firstAttribute="leading" secondItem="bzv-6z-Cgt" secondAttribute="leading" constant="20" id="24h-NC-rfp"/>
+                            <constraint firstItem="fda-S1-JeL" firstAttribute="top" secondItem="ceE-UH-HPu" secondAttribute="bottom" constant="20" id="3sP-Rj-mG7"/>
+                            <constraint firstItem="bzv-6z-Cgt" firstAttribute="bottom" secondItem="wte-kV-CFN" secondAttribute="bottom" constant="20" id="4gr-fq-R7H"/>
                             <constraint firstItem="3CI-Ah-oEX" firstAttribute="top" secondItem="bzv-6z-Cgt" secondAttribute="top" constant="20" id="Bki-kq-Q25"/>
                             <constraint firstItem="HZX-ha-Fn7" firstAttribute="centerX" secondItem="3PY-mQ-hx0" secondAttribute="centerX" id="IVg-4k-src"/>
                             <constraint firstItem="YLr-wp-1wp" firstAttribute="leading" secondItem="bzv-6z-Cgt" secondAttribute="leading" constant="20" id="IqP-Vw-Aii"/>
                             <constraint firstItem="bzv-6z-Cgt" firstAttribute="trailing" secondItem="fda-S1-JeL" secondAttribute="trailing" constant="20" id="J4M-Rt-RRZ"/>
-                            <constraint firstItem="bzv-6z-Cgt" firstAttribute="trailing" secondItem="T8H-rS-aw7" secondAttribute="trailing" constant="20" id="Mi8-hq-4pp"/>
-                            <constraint firstItem="T8H-rS-aw7" firstAttribute="top" secondItem="HZX-ha-Fn7" secondAttribute="bottom" constant="20" id="NkN-NJ-eJT"/>
+                            <constraint firstItem="wte-kV-CFN" firstAttribute="top" secondItem="HZX-ha-Fn7" secondAttribute="bottom" constant="20" id="Ljg-aj-NNd"/>
                             <constraint firstItem="bzv-6z-Cgt" firstAttribute="trailing" secondItem="3CI-Ah-oEX" secondAttribute="trailing" constant="20" id="QNL-f7-0vS"/>
                             <constraint firstItem="YLr-wp-1wp" firstAttribute="centerX" secondItem="3PY-mQ-hx0" secondAttribute="centerX" id="UsV-yh-cpG"/>
                             <constraint firstItem="3CI-Ah-oEX" firstAttribute="leading" secondItem="bzv-6z-Cgt" secondAttribute="leading" constant="20" id="bCM-n4-KDG"/>
                             <constraint firstItem="fda-S1-JeL" firstAttribute="leading" secondItem="bzv-6z-Cgt" secondAttribute="leading" constant="20" id="btY-YA-YUt"/>
-                            <constraint firstItem="bzv-6z-Cgt" firstAttribute="trailing" secondItem="ATk-rD-IrT" secondAttribute="trailing" constant="50" id="dMe-VI-yzf"/>
                             <constraint firstItem="ceE-UH-HPu" firstAttribute="leading" secondItem="bzv-6z-Cgt" secondAttribute="leading" constant="20" id="dnc-Cp-skZ"/>
                             <constraint firstItem="bzv-6z-Cgt" firstAttribute="trailing" secondItem="YLr-wp-1wp" secondAttribute="trailing" constant="20" id="fbb-Wl-lgh"/>
                             <constraint firstItem="YLr-wp-1wp" firstAttribute="top" secondItem="fda-S1-JeL" secondAttribute="bottom" constant="20" id="hP1-Fx-uj3"/>
-                            <constraint firstItem="T8H-rS-aw7" firstAttribute="leading" secondItem="bzv-6z-Cgt" secondAttribute="leading" constant="20" id="jbP-pi-2TZ"/>
                             <constraint firstItem="bzv-6z-Cgt" firstAttribute="trailing" secondItem="ceE-UH-HPu" secondAttribute="trailing" constant="20" id="jo9-bq-ywd"/>
-                            <constraint firstItem="ATk-rD-IrT" firstAttribute="centerX" secondItem="3PY-mQ-hx0" secondAttribute="centerX" id="mO8-pt-LfF"/>
-                            <constraint firstItem="ATk-rD-IrT" firstAttribute="top" secondItem="ceE-UH-HPu" secondAttribute="bottom" constant="20" id="pMX-fK-gxq"/>
                             <constraint firstItem="fda-S1-JeL" firstAttribute="centerX" secondItem="3PY-mQ-hx0" secondAttribute="centerX" id="rML-am-T0G"/>
-                            <constraint firstItem="fda-S1-JeL" firstAttribute="top" secondItem="ATk-rD-IrT" secondAttribute="bottom" constant="20" id="tAG-UD-fzv"/>
                             <constraint firstItem="ceE-UH-HPu" firstAttribute="top" secondItem="3CI-Ah-oEX" secondAttribute="bottom" constant="20" id="vKW-go-mH5"/>
-                            <constraint firstItem="ATk-rD-IrT" firstAttribute="leading" secondItem="bzv-6z-Cgt" secondAttribute="leading" constant="50" id="xGB-Jg-GAF"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bzv-6z-Cgt"/>
                     </view>
@@ -226,11 +214,55 @@
                         <outlet property="flagLeft" destination="8ge-dy-rwU" id="f9t-qe-8Ul"/>
                         <outlet property="flagRight" destination="8tV-Rf-4Zb" id="iEu-cw-n5I"/>
                         <outlet property="goOutlet" destination="T8H-rS-aw7" id="1yw-wD-UAy"/>
+                        <outlet property="popViewFX" destination="5oO-zy-BBn" id="cOB-Mo-jju"/>
                         <outlet property="rateLabel" destination="mgr-aH-eU6" id="v6W-Pa-VHE"/>
                         <outlet property="textFieldFX" destination="ceE-UH-HPu" id="dMt-IZ-rA8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GOq-5x-r70" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="5oO-zy-BBn">
+                    <rect key="frame" x="0.0" y="0.0" width="268" height="391"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose your currency" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cl1-dU-2N4">
+                            <rect key="frame" x="20" y="20" width="228" height="36"/>
+                            <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ATk-rD-IrT">
+                            <rect key="frame" x="24" y="76" width="224" height="162"/>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <outlet property="dataSource" destination="YSi-Eq-Ean" id="lj0-RO-vR9"/>
+                                <outlet property="delegate" destination="YSi-Eq-Ean" id="uiL-dx-0Ru"/>
+                            </connections>
+                        </pickerView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T8H-rS-aw7">
+                            <rect key="frame" x="20" y="299" width="228" height="72"/>
+                            <fontDescription key="fontDescription" type="system" weight="black" pointSize="50"/>
+                            <state key="normal" title="GO">
+                                <color key="titleColor" red="0.039215686270000001" green="0.37647058820000001" blue="0.47843137250000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </state>
+                            <connections>
+                                <action selector="goFXButton:" destination="YSi-Eq-Ean" eventType="touchUpInside" id="9xE-oj-qch"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="T8H-rS-aw7" firstAttribute="leading" secondItem="67X-BF-AjN" secondAttribute="leading" constant="20" id="2Ex-d6-1Uq"/>
+                        <constraint firstItem="67X-BF-AjN" firstAttribute="trailing" secondItem="cl1-dU-2N4" secondAttribute="trailing" constant="20" id="2ZH-qb-msx"/>
+                        <constraint firstItem="cl1-dU-2N4" firstAttribute="top" secondItem="5oO-zy-BBn" secondAttribute="top" constant="20" id="KEg-te-9hE"/>
+                        <constraint firstAttribute="bottom" secondItem="T8H-rS-aw7" secondAttribute="bottom" constant="20" id="Px3-n2-Tz4"/>
+                        <constraint firstItem="cl1-dU-2N4" firstAttribute="leading" secondItem="67X-BF-AjN" secondAttribute="leading" constant="20" id="WCt-64-qaq"/>
+                        <constraint firstItem="67X-BF-AjN" firstAttribute="trailing" secondItem="ATk-rD-IrT" secondAttribute="trailing" constant="20" id="bKL-Vj-ISl"/>
+                        <constraint firstItem="67X-BF-AjN" firstAttribute="trailing" secondItem="T8H-rS-aw7" secondAttribute="trailing" constant="20" id="pfn-LP-Uw1"/>
+                        <constraint firstItem="ATk-rD-IrT" firstAttribute="centerX" secondItem="5oO-zy-BBn" secondAttribute="centerX" constant="2" id="u7F-Ns-uCK"/>
+                        <constraint firstItem="ATk-rD-IrT" firstAttribute="top" secondItem="cl1-dU-2N4" secondAttribute="bottom" constant="20" id="w3b-3e-vm3"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="67X-BF-AjN"/>
+                </view>
             </objects>
             <point key="canvasLocation" x="512" y="703"/>
         </scene>
