--- a/XellissimeTravel/View/Storyboard/XellissimeTravel/Storyboard/XellissimeTravel/Storyboard/Base.lproj/Weather.storyboard
+++ b/XellissimeTravel/View/Storyboard/XellissimeTravel/Storyboard/XellissimeTravel/Storyboard/Base.lproj/Weather.storyboard
@@ -242,10 +242,18 @@
                                     <action selector="nextDaysButtonPressed:" destination="wB7-hD-YIF" eventType="touchUpInside" id="70K-sa-51d"/>
                                 </connections>
                             </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="pXt-FP-dZ7">
+                                <rect key="frame" x="187" y="737" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" priority="999" constant="40" id="20V-mO-vwY"/>
+                                    <constraint firstAttribute="width" priority="999" constant="40" id="IQD-hj-Tnj"/>
+                                </constraints>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" red="0.61960784310000006" green="0.59215686270000001" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="OgU-Ai-qcC" firstAttribute="trailing" secondItem="h7n-W9-x7b" secondAttribute="trailing" constant="20" id="29a-iV-318"/>
+                            <constraint firstItem="pXt-FP-dZ7" firstAttribute="centerX" secondItem="9kO-rg-TMS" secondAttribute="centerX" id="2EK-8t-B30"/>
                             <constraint firstItem="OgU-Ai-qcC" firstAttribute="trailing" secondItem="MEH-0m-jtB" secondAttribute="trailing" constant="20" id="8FN-4o-I2z"/>
                             <constraint firstItem="OgU-Ai-qcC" firstAttribute="trailing" secondItem="i1o-Oc-Vsz" secondAttribute="trailing" constant="20" id="90L-U7-kZN"/>
                             <constraint firstItem="i1o-Oc-Vsz" firstAttribute="leading" secondItem="OgU-Ai-qcC" secondAttribute="leading" constant="20" id="AlN-FM-ui2"/>
@@ -254,6 +262,7 @@
                             <constraint firstItem="OgU-Ai-qcC" firstAttribute="trailing" secondItem="aft-1K-rrF" secondAttribute="trailing" constant="20" id="Eaa-sf-NlA"/>
                             <constraint firstItem="i1o-Oc-Vsz" firstAttribute="top" secondItem="BLa-zd-25s" secondAttribute="bottom" constant="20" id="G7U-wA-ZTI"/>
                             <constraint firstItem="OgU-Ai-qcC" firstAttribute="trailing" secondItem="BLa-zd-25s" secondAttribute="trailing" constant="20" id="Hu4-cS-kyv"/>
+                            <constraint firstItem="pXt-FP-dZ7" firstAttribute="centerY" secondItem="9kO-rg-TMS" secondAttribute="centerY" id="IeR-pE-2JM"/>
                             <constraint firstItem="MEH-0m-jtB" firstAttribute="top" secondItem="OgU-Ai-qcC" secondAttribute="top" constant="20" id="K1i-lc-8EG"/>
                             <constraint firstItem="aft-1K-rrF" firstAttribute="top" secondItem="MEH-0m-jtB" secondAttribute="bottom" constant="20" id="Les-qQ-kGe"/>
                             <constraint firstItem="BLa-zd-25s" firstAttribute="top" secondItem="aft-1K-rrF" secondAttribute="bottom" constant="20" id="Pmq-Ru-oAi"/>
@@ -268,11 +277,12 @@
                             <constraint firstItem="h7n-W9-x7b" firstAttribute="top" secondItem="i1o-Oc-Vsz" secondAttribute="bottom" constant="20" id="iGl-uj-eMg"/>
                             <constraint firstItem="MEH-0m-jtB" firstAttribute="leading" secondItem="OgU-Ai-qcC" secondAttribute="leading" constant="20" id="te0-a2-wXy"/>
                             <constraint firstItem="OgU-Ai-qcC" firstAttribute="trailing" secondItem="Gpg-Pd-oUW" secondAttribute="trailing" constant="100" id="uhP-MW-zx3"/>
-                            <constraint firstItem="OgU-Ai-qcC" firstAttribute="trailing" secondItem="9kO-rg-TMS" secondAttribute="trailing" constant="20" id="zJz-y9-yne"/>
+                            <constraint firstItem="OgU-Ai-qcC" firstAttribute="trailing" secondItem="9kO-rg-TMS" secondAttribute="trailing" priority="999" constant="20" id="zJz-y9-yne"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="OgU-Ai-qcC"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="pXt-FP-dZ7" id="4q8-2L-Xxv"/>
                         <outlet property="chooseCityLabel" destination="BLa-zd-25s" id="zJt-5g-Lta"/>
                         <outlet property="cityTextField" destination="Fs1-nG-C3i" id="viM-1q-mgB"/>
                         <outlet property="countryTextField" destination="haA-9m-SVS" id="vLC-Hu-9uL"/>
